Revert "Try to fix horizontal alignment of search fields and search results."
This reverts commit c76a7fc971700ac9c6fb1a92cc237e06b1d8675a.

--- a/css/div.css
+++ b/css/div.css
@@ -2,10 +2,6 @@ div.AutocompleteArea {
     background-color: #f8f8f8;
 }
 
-div.SectionContainer {
-	display: inline;
-}
-
 div.AutocompleteArea.container {
 	position: absolute;
 	z-index: 1;
